--- a/packages/datakit/package.json
+++ b/packages/datakit/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@codeforge/datakit",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "type": "module",
   "main": "./dist/index.cjs",
