--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "turbo": "^2.3.4",
     "typescript": "5.5.4"
   },
+  "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
   },
